[package]
name = "matey"
version = "0.1.0"
authors = ["Eshan Singh <eshansingh@gmail.com>", "Jeff Zhang <zhang.jeffreyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
snafu = "0.6"
sha-1 = "0.9"
url = "2.2"
percent-encoding = "2.1"
build-info = "0.0.21"
reqwest = "0.11"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "macros"] }

[build-dependencies]
build-info-build = "0.0.21"