[package]
name = "matey"
version = "0.1.0"
authors = ["Eshan Singh <eshansingh@gmail.com>", "Jeff Zhang <zhang.jeffreyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6", default-features = false, features = ["std"] }
snafu = { version = "0.6", default-features = false, features = ["std"] }
sha-1 = "0.9"
percent-encoding = "2.1"
reqwest = "0.11"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros", "parking_lot"] }
async-trait = "0.1"
rand = "0.8"
log = "0.4"
env_logger = "0.8"
bitvec = "0.20"
bytes = "1"
indicatif = "0.15"
is-macro = "0.1"